--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 :root {
-  --accent: #2a6f97;
+  --accent: #b017c5;  ;
   --text-main: #111;
   --text-muted: #555;
   --border-light: #eee;
@@ -14,14 +14,14 @@ body {
   font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
   color: var(--text-main);
   background: transparent;
-  line-height: 1.65;
+  line-height: 1.55;
   overflow: hidden; 
 }
 
 #site-content {
   opacity: 0;
-  transition: opacity 0.8s ease;
-  
+  z-index: 4;
+
 }
 
 /* =========================================================
@@ -31,7 +31,7 @@ body {
 #hero {
   position: fixed;
   inset: 0;
-  z-index: 9999;
+  z-index: 5;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -78,47 +78,20 @@ body.hero-done #hero {
   pointer-events: none;
 }
 
-
-.hero-image {
-  width: 220px;
-  height: 220px;
-  border-radius: 16px;
-  object-fit: cover;
-  box-shadow: 0 20px 60px rgba(0,0,0,0.35);
-  position: relative;
-  z-index: 3;
-  opacity: 1;
-  outline: 1px solid rgba(0,0,0,0.06);
-  outline-offset: -1px;
-  transition: transform 1.1s cubic-bezier(0.22, 1, 0.36, 1);
-  
+.hero-image { 
+    width: 220px; 
+    height: 220px; 
+    top: 390px; 
+    left: 1065px;
+    border-radius: 20px; 
+    object-fit: cover;
+    box-shadow: 0 20px 60px rgba(0,0,0,0.35); 
+    position: relative; 
+    z-index: 5; 
+    outline: 1px solid rgba(0,0,0,0.06); 
+    outline-offset: -1px; 
+    transition: transform 1.1s cubic-bezier(0.22, 1, 0.36, 1); 
 }
-  /* top: 140px;  
-  left: 1165px;   */
-.profile-image {
-  position: fixed;
-  top: 140px;
-  left: 1165px;
-  z-index: 3;
-
-  width: 242px;
-  height: 242px;
-
-  border-radius: 4px;
-  object-fit: cover;
-
-  /* stronger shadow for white background */
-  box-shadow:
-    0 30px 80px rgba(0,0,0,0.18),
-    0 10px 30px rgba(0,0,0,0.12);
-
-  /* subtle backing to mimic hero glow */
-  background: rgba(255,255,255,0.6);
-  transform: none;
-
-  opacity: 0;
-}
-
 
 .hero-name {
   font-family: "Georgia", "Times New Roman", serif;
@@ -160,17 +133,12 @@ body.hero-done .cursor {
 
 /* image slides to top-right and grows */
 body.hero-done .hero-image {
-  transform: translate(14vw, -32vh);
+  transform: translate(4vw, -20vh);
+  border-radius: 3px;
+  object-position: center 40%;
+  position: absolute;   
   scale: 1.1;
-  border-radius: 4px;
   pointer-events: none;
-  top: 120px;   /* distance from top when stuck */
-  will-change: transform;
-}
-
-body.hero-done .profile-image {
-  pointer-events: none;
-  opacity: 1;
 }
 
 /* name slides to top-left */
@@ -221,12 +189,12 @@ body.hero-done #site-content {
   gap: 2.2rem;
 }
 
+/* Nav links */
 .nav-links a {
-  font-family: "Trebuchet MS,", system-ui, sans-serif;
+  font-family: "Gill Sans,", system-ui, sans-serif;
   font-size: 1.0rem;
   font-weight: 300;
   letter-spacing: 0.03em;
-  /* text-transform: uppercase;  */
   color: #000000;     
 }
 
@@ -240,19 +208,18 @@ body.hero-done #site-content {
 
 .container {
   max-width: 880px;
-  margin-left: 400px;
-  margin-right: 650px;  
+  margin-left: 430px;
+  margin-right: 670px;  
   margin-top: 50px;
-  /* padding-left: 40px;   
-  padding-right: 20px; */
 }
 
+/* name */
 h1 {
-  font-family: "Georgia", serif;
+  font-family: "Gill Sans", sans-serif;
   font-size: 3.1rem;
-  font-weight: 500;
+  font-weight: 400;
   line-height: 3.0rem;
-  margin-bottom: 0.4rem;
+  margin-bottom: 1.2rem;
 }
 
 .subtitle {
@@ -267,6 +234,20 @@ p {
   line-height: 1.7rem;
   font-family: "Noto Sans", sans-serif;
 }
+
+.inline-link {
+  color: #b017c5;              /* purple accent */
+  text-decoration: none;
+  /* font-weight: 500; */
+  transition: color 0.2s ease, text-decoration-color 0.2s ease;
+}
+
+.inline-link:hover {
+  text-decoration: underline;
+  text-decoration-thickness: 1.5px;
+  text-underline-offset: 3px;
+}
+
 
 a {
   color: var(--accent);
